--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,48 @@
         {% endblock %}
     </head>
     <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    <a class="navbar-brand" href="#">Hidden brand</a>
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="{{path('app_home')}}">Home <span class="sr-only">(current)</span></a>
+      </li>
+      {% if app.user is null %}
+      <li class="nav-item">
+        <a class="nav-link" href="#">Register</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Login</a>
+      </li>
+      {% else %}
+      <li class="nav-item">
+        <a class="nav-link" href="#">Logout</a>
+      </li>
+      {% endif %}
+
+            <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Crud Operations
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="{{path('app_forum_crud_index')}}">Crud Forum</a>
+          <a class="dropdown-item" href="{{path('app_category_crud_index')}}">Crud Category</a>
+          <a class="dropdown-item" href="{{path('app_topic_create')}}">Crud Topic</a>
+          <a class="dropdown-item" href="{{path('app_user_crud_index')}}">Crud User</a>
+                    
+
+
+        </div>
+      </li>
+    </ul>
+    
+
+  </div>
+</nav>
         {% block body %}{% endblock %}
     </body>
 </html>
