--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,7 +6,9 @@
     {% for flash_error in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-
+{% for error in app.flashes('registration_error') %}
+    {{error}}
+{% endfor %} %}
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
