--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,10 +37,10 @@
 					</li>
 					{% if app.user is null %}
 						<li class="nav-item">
-							<a class="nav-link" href="#">Register</a>
+							<a class="nav-link" href="{{path('app_login')}}">Register</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Login</a>
+							<a class="nav-link" href="{{path('app_login')}}">Login</a>
 						</li>
 					{% else %}
 						<li class="nav-item">
