Added an admin side (unfinished) Added a simple frontend for viewing / creating topics. Implemented webpack encore Removed many unnecessary files Implemented symfony/ux-chartjs bundle to use charts Added datetime functions for dql (doctrine)

--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -1,3 +1,14 @@
 body {
-    background-color: #212529;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #e9f0f5;
+}
+
+.container {
+    background-color: white;
+    height: 100vh;
+    padding-top: 1%;
+}
+
+.bold {
+    font-weight: bold;
 }
