--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,20 +1,21 @@
-{% extends 'base.html.twig' %}
+{% extends '@EasyAdmin/page/content.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
+{% block main %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<div class="row">
+		<div class="col-6 text-center">
+			<div class="card">
+				<div class="card-title text-muted">Statistiques for registered users by Year</div>
+				{{render_chart(birthstats)}}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/R N/Desktop/ayman/dev/php/forum/Forum/src/Controller/AdminController.php'|file_link(0) }}">src/Controller/AdminController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/R N/Desktop/ayman/dev/php/forum/Forum/templates/admin/index.html.twig'|file_link(0) }}">templates/admin/index.html.twig</a></code></li>
-    </ul>
-</div>
-{% endblock %}
+			</div>
+		</div>
+		<div class="col-6">
+			<div class="card">
+				<div class="card-title text-muted">Statistiques for registrations</div>
+				{{render_chart(registrations)}}
+			</div>
+		</div>
+	</div>
+</div>{% endblock %}
