--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,61 +11,52 @@
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
-			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-      <link rel="stylesheet" href="/assets/css/base.css"/>
+			<link rel="stylesheet " href="/assets/css/style.css ">
+			<link rel="stylesheet" href="/assets/css/widget.css">
+			<link rel="stylesheet" href="/assets/css/list_topic.css">
+			<link rel="stylesheet" href="/assets/css/create_topic.css">
+			<link rel="stylesheet" href="/assets/css/footer.css">
+
+
+			<link rel="stylesheet" href="/assets/css/login.css">
+			<link rel="stylesheet" href="/assets/css/view_post.css">
 		{% endblock %}
 
 		{% block javascripts %}
+
 			{{ encore_entry_script_tags('app') }}
-			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 		{% endblock %}
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-				<a class="navbar-brand" href="#">Hidden brand</a>
-				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-					<li class="nav-item active">
-						<a class="nav-link" href="{{path('app_home')}}">Home
-							<span class="sr-only">(current)</span>
-						</a>
-					</li>
-					{% if app.user is null %}
-						<li class="nav-item">
-							<a class="nav-link" href="{{path('app_login')}}">Register</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{path('app_login')}}">Login</a>
-						</li>
-					{% else %}
-						<li class="nav-item">
-							<a class="nav-link" href="#">Logout</a>
-						</li>
-					{% endif %}
-
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Crud Operations
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="{{path('app_forum_crud_index')}}">Crud Forum</a>
-							<a class="dropdown-item" href="{{path('app_category_crud_index')}}">Crud Category</a>
-							<a class="dropdown-item" href="{{path('app_topic_create')}}">Crud Topic</a>
-							<a class="dropdown-item" href="{{path('app_user_crud_index')}}">Crud User</a>
-
-
-						</div>
-					</li>
-				</ul>
-
-
-			</div>
-		</nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{{path('app_home')}}">Home</a>
+        </li>
+		{% if app.user is null %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{path('app_login')}}">Login</a>
+        </li>
+		        <li class="nav-item">
+          <a class="nav-link" href="{{path('app_register')}}">Register</a>
+        </li>
+		{% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="#">Logout</a>
+        </li>
+		{% endif %}
+        
+      </ul>
+    </div>
+  </div>
+</nav>
 		{% block body %}{% endblock %}
 	</body>
 </html>
