Added pagination for topics and comments

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -33,7 +33,7 @@
 											</div>
 											<div class="category-name-stats ">
 												<div class="category-name ">
-													<a href="{{path('app_topic_list', {id: category.id})}}">{{category.title}}</a>
+													<a href="{{path('app_topic_list', {id: category.id, page: 1})}}">{{category.title}}</a>
 												</div>
 												<div class="category-stats ">
 													<p>Topics
